# Hierarchical_Tri_WGK

./: .gitignore  CSG_TRANSFORMER_IMPLEMENTATION_SUMMARY.md  LICENSE  README.en.md  README.md  hierarchical_triangular_wl.py  pyproject.toml  pyrightconfig.json  pytest.ini  utils.py
.omo/plans/: add_edge_label_support.md
.omo/run-continuation/: ses_172e50908ffeamvnVOFQPgb7Fi.json  ses_17357f476ffe8CLqlD3nRSdODt.json
baselines/0-GraphCL-ours/: 0-GraphCL-gc-scripts.sh
baselines/1-InfoGraph-ours/: 1-InfoGraph-gc-scripts.sh
baselines/2-Pretrain-GNNs-ours/: 1-Pretrain_GNNs-gc-scripts.sh
baselines/3-GCC-nc-gc/: generate.py  train.py
baselines/3-GCC-ours/: 3-GCC-gc-scripts.sh  3-GCC-nc-scripts.sh
baselines/4-MVGRL-ours/: 4-MVGRL-gc-scripts.sh  4-MVGRL-nc-scripts.sh
baselines/5-DGI-nc/: train.py
baselines/5-DGI-ours/: 5-DGI-nc-scripts.sh
baselines/6-GPT-GNN-ours/: 6-GPT-GNN-scripts.sh
baselines/7-Subg-Con-nc/: subgcon.py  train.py
baselines/7-Subg-Con-ours/: 7-Subg-Con-scripts.sh
cyclic_schema/: __init__.py  add_edge_label_support.md  canonical_mcb.py  cfi_parity_cycle space.md  csg_transformer.py  csg_transformer_prompt.md  csg_transformer方案.md  cyclic_schema.ipynb  cyclic_schema.py  cyclic_schema_prompt.md  examples_power_of_htn_wl.py  hierarchical_mp_prompt.md  hierarchical_triangulated_wl.py  htn_wl.py  htn_wl_prompt.md  multilayer_csg.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_canonical_mcb.py  test_hierarchical_wl.py  theoretic_analysis.md  theoretical_analysis_new.md  整合hierarchical_wl.md
cyclic_schema/examples/: cfi_3wl_analysis.md
eval_grakel_baselines/: test_grakel.py  test_grakel_baselines.py  test_grakel_baselines_scripts.sh  test_wgk.py  test_wgk_script.sh  wgk_utils.py
eval_grakel_baselines/outputs/: final_baseline_grakels_result_max.csv
eval_grakel_baselines/outputs (nu=0.01)/: baseline_grakels_result.csv  baseline_grakels_result_addition.csv  baseline_grakels_result_mutagenicity.csv  final_baseline_grakels_result.csv  final_baseline_grakels_result_FIRSTMM_DB.csv  final_baseline_grakels_result_addition.csv  final_baseline_grakels_result_mutagenicity.csv
hierarchical_cycle_complex_wl_tools/: classic_edge_wl_tools.py  edge_wl_via_cycle_complexes.py  edge_wl_via_triangulated_neighbors.py  local_structure_edge_wl_tools.py  local_structure_wl_tools.py
hierarchical_tri_wl_tools/: classic_edge_wl_tools.py  classic_wl_tools.py  hierarchical_cycle_complex_bfs_neighbors.py  local_structure_edge_wl_tools.py  node_wl_via_cycle_complexes.py  node_wl_via_triangulated_neighbors.py  topo_aware_wl_test.py
our_experiments/: cfi_test.py  example.py
tests/: conftest.py  test_csg_transformer.py  test_cyclic_schema.py  test_integration.py  test_kernel.py  test_utils.py  test_wl_tools.py
(+273 files in other folders)
