[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cyclic_schema"
version = "0.1.0"
description = "Graph neural network tools for cyclic structure analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "networkx>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "isort>=5.0",
]

[tool.setuptools.packages.find]
include = ["cyclic_schema*"]